@@ -135,7 +135,7 @@ public class Resources {
 		Map<IFile, Long> map= new HashMap<>();
 		for (Iterator<IFile> iter= files.iterator(); iter.hasNext(); ) {
 			IFile file= iter.next();
-			map.put(file, new Long(file.getModificationStamp()));
+			map.put(file, Long.valueOf(file.getModificationStamp()));
 		}
 		return map;
 	}
